--- a/hw4/index.html
+++ b/hw4/index.html
@@ -38,6 +38,7 @@
 <h1 align="middle">CS 184: Computer Graphics and Imaging, Spring 2024</h1>
 <h1 align="middle">Project 4: Cloth Simulator</h1>
 <h2 align="middle">Derek Guo</h2>
+<h2 align="middle">https://cal-cs184-student.github.io/hw-webpages-sp24-DreekFire/hw4/index.html</h2>
 
 <br><br>
 
