--- a/hw4/index.html
+++ b/hw4/index.html
@@ -255,11 +255,11 @@
           <tr align="center">
             <td>
               <img src="img/selfhighdensity.png" align="middle" width="400px" />
-              <figcaption>High density acts like low ks</figcaption>
+              <figcaption>High density acts like low $k_s$</figcaption>
             </td>
             <td>
               <img src="img/selflowdensity.png" align="middle" width="400px" />
-              <figcaption>Low density acts like high ks</figcaption>
+              <figcaption>Low density acts like high $k_s$</figcaption>
             </td>
           </tr>
         </table>
